tests/src/frontend/syntax/invalid/matches_curly.sk
fun main(): void {
  a is { C _};
}
